[gd_scene load_steps=11 format=3 uid="uid://o58ub0t1rt1d"]

[ext_resource type="Script" uid="uid://ci8o3vyha6efn" path="res://scripts/main_menu.gd" id="1_yqorp"]
[ext_resource type="StyleBox" uid="uid://rlm8imhvt7me" path="res://assets/resources/unfocusButton.tres" id="3_2wh52"]
[ext_resource type="Theme" uid="uid://c722wj6xsd7wq" path="res://assets/fonts/DefaultText.tres" id="3_kperw"]
[ext_resource type="StyleBox" uid="uid://bsokl1phpum52" path="res://assets/resources/pressButton.tres" id="4_l72w3"]
[ext_resource type="StyleBox" uid="uid://dga2eu6d1l5l2" path="res://assets/resources/focusButton.tres" id="4_ow34m"]
[ext_resource type="AudioStream" uid="uid://b4fywky7y6ytv" path="res://assets/sounds/SFX_Click.wav" id="6_kperw"]
[ext_resource type="AudioStream" uid="uid://vtf20e5pdtlb" path="res://assets/sounds/music/BGM_Menu.mp3" id="6_u5y8t"]
[ext_resource type="AudioStream" uid="uid://b1arcdv85lfeb" path="res://assets/sounds/SFX_Hover.mp3" id="8_q2pbu"]

[sub_resource type="Gradient" id="Gradient_meuhk"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kperw"]
gradient = SubResource("Gradient_meuhk")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -256.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 644.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.28591368, 0.49252704)
texture = SubResource("GradientTexture2D_kperw")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ButtonNewGame" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("3_kperw")
theme_override_styles/normal = ExtResource("3_2wh52")
theme_override_styles/pressed = ExtResource("4_l72w3")
theme_override_styles/hover = ExtResource("4_ow34m")
theme_override_styles/hover_pressed = ExtResource("4_l72w3")
theme_override_styles/focus = ExtResource("4_ow34m")
text = "NEW GAME"

[node name="ButtonSettings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("3_kperw")
theme_override_styles/normal = ExtResource("3_2wh52")
theme_override_styles/pressed = ExtResource("4_l72w3")
theme_override_styles/hover = ExtResource("4_ow34m")
theme_override_styles/hover_pressed = ExtResource("4_l72w3")
theme_override_styles/focus = ExtResource("4_ow34m")
text = "SETTINGS"

[node name="ButtonExit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("3_kperw")
theme_override_styles/normal = ExtResource("3_2wh52")
theme_override_styles/pressed = ExtResource("4_l72w3")
theme_override_styles/hover = ExtResource("4_ow34m")
theme_override_styles/hover_pressed = ExtResource("4_l72w3")
theme_override_styles/focus = ExtResource("4_ow34m")
text = "QUIT"

[node name="BGM_Menu" type="AudioStreamPlayer2D" parent="."]
position = Vector2(568, 499)
stream = ExtResource("6_u5y8t")
autoplay = true

[node name="SFX_Pressed" type="AudioStreamPlayer2D" parent="."]
position = Vector2(568, 499)
scale = Vector2(1.0027318, 0.9978743)
stream = ExtResource("6_kperw")

[node name="SFX_Hover" type="AudioStreamPlayer2D" parent="."]
position = Vector2(568, 499)
stream = ExtResource("8_q2pbu")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
